@@ -1,3 +1,9 @@
+2011-08-29  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	Backport from trunk
+	PR libfortran/50192
+	* gfortran.dg/widechar_compare_1.f90:  New test.
+
 2011-08-27  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/50202
